--- a/PDFQueryBot.ipynb
+++ b/PDFQueryBot.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNZy2OFgAwmAbpvHsCIWV0n",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -7121,6 +7123,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Sangeeta-vishwakarma/PDFQueryBot/blob/main/PDFQueryBot.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# **PDFQueryBot -  PDF-Based Question Answering Chatbot**\n"
       ],
@@ -7181,7 +7193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "OlWzAqKguxop",
         "colab": {
@@ -7630,7 +7642,7 @@
       "metadata": {
         "id": "KpO9-Pl-v8a3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7668,7 +7680,7 @@
         },
         "outputId": "bb0f0887-4a4a-4d5d-f512-70902b21f876"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7723,7 +7735,7 @@
         "id": "3LqEQrNpJ6MR",
         "outputId": "1f868287-4da8-4f53-8b46-7821d753bcea"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7769,7 +7781,7 @@
       "metadata": {
         "id": "wlaTlITW1aGe"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7786,7 +7798,7 @@
       "metadata": {
         "id": "BoHaSyzD1aLO"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7823,7 +7835,7 @@
       "metadata": {
         "id": "sSndq8V21aM8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7839,7 +7851,7 @@
         "id": "AuidAion1aPX",
         "outputId": "2f4ec617-2f9a-46d0-dd6e-45a41b43b670"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8012,7 +8024,7 @@
         "id": "R4MNLKAH1aSu",
         "outputId": "cff6cc13-a3eb-4554-df0c-a748c8613ae9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8212,7 +8224,7 @@
       "metadata": {
         "id": "SY5J7ccS1aWp"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8262,7 +8274,7 @@
       "metadata": {
         "id": "09YWJB6N1abJ"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8376,7 +8388,7 @@
         "id": "ajCWr658O4LM",
         "outputId": "5f31d10d-70de-44af-b1df-302ce66933f0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8507,7 +8519,7 @@
       "metadata": {
         "id": "1Nek0C4bO_CJ"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8547,7 +8559,7 @@
       "metadata": {
         "id": "61OhHknCRUnN"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8559,7 +8571,7 @@
       "metadata": {
         "id": "5taasgkmRU7W"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8590,7 +8602,7 @@
       "metadata": {
         "id": "u1PMAQ9DRcOe"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8608,7 +8620,7 @@
       "metadata": {
         "id": "xlbFuabxRfE3"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8625,7 +8637,7 @@
         "id": "dt1K1DWkRirn",
         "outputId": "80a9d217-20ad-4588-a216-c722f6652e94"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8663,7 +8675,7 @@
         "id": "5gQ9FrM8RxPC",
         "outputId": "a83ad5c7-0544-43fa-9c2f-f18f0547397b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
